# drf_vue_project

./: .gitignore
apps/notation/: admin.py  models.py  serializers.py  urls.py  views.py
apps/notation/migrations/: 0001_initial.py
back/: main.py  pyproject.toml
back/apps/notation/: apps.py
back/notes/: settings.py
front/: package.json
front/src/: App.vue
front/src/components/: NoteDetail.vue  NoteForm.vue  NotesList.vue
front/src/services/: api.js
front/src/stores/: notes.js
front/src/views/: HomeView.vue
notes/: urls.py
