[project]
name = "drf-vue-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "psycopg2>=2.9.11",
    "python-decouple>=3.8",
    "ruff>=0.14.1",
]
